Comments and spacing fixes

--- a/wwwroot/assets/styles/style.css
+++ b/wwwroot/assets/styles/style.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
+:root {
+  --bs-darker: #161616;
+  --bs-darker-rgb: 22, 22, 22;
+}
+
 html {
     height: 100%;
   }
@@ -13,10 +18,17 @@ body{
 }
 
 .margin-div{
-  margin-bottom: 10%;
+  margin-bottom: 7%;
+}
+.margin2-div{
+  margin-bottom: 3%;
 }
 .margin-header{
   margin-bottom: 5%;
+}
+.bg-darker{
+  --bs-bg-opacity: 1;
+  background-color: rgba(var(--bs-darker-rgb), var(--bs-bg-opacity)) !important;
 }
 
 h1,
